--- a/templates/property/edit.html.twig
+++ b/templates/property/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Property{% endblock %}
 
 {% block body %}
-    <h1>Edit Property</h1>
+<div class="container">
+    <h1>Editer le bien</h1>
 
     {{ include('property/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('property_index') }}">back to list</a>
 
     {{ include('property/_delete_form.html.twig') }}
+</div>
+
 {% endblock %}
