--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -4,48 +4,17 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="mt-4">Tout nos biens</h1>
+        <h1 class="mt-4 mb-4">Tout nos biens</h1>
     </div>
 
-    <table class="table container">
-        
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Surface</th>
-                <th>Rooms</th>
-                <th>Bedrooms</th>
-                <th>Floor</th>
-                <th>Price</th>
-                <th>Heat</th>
-                <th>City</th>
-                <th>Address</th>
-                <th>Postal_code</th>
-                <th>Sold</th>
-                <th>Created_at</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <table class="table table-striped container">
+     
         {% for property in properties %}
             <tr>
                 <td>{{ property.title }}</td>
-                <td>{{ property.description }}</td>
-                <td>{{ property.surface }}</td>
-                <td>{{ property.rooms }}</td>
-                <td>{{ property.bedrooms }}</td>
-                <td>{{ property.floor }}</td>
-                <td>{{ property.getFormattedPrice }}</td>
-                <td>{{ property.heat }}</td>
-                <td>{{ property.city }}</td>
-                <td>{{ property.address }}</td>
-                <td>{{ property.postalCode }}</td>
-                <td>{{ property.sold ? 'Yes' : 'No' }}</td>
-                <td>{{ property.createdAt ? property.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('property_show', {'id': property.id}) }}">show</a>
-                    <a href="{{ path('property_edit', {'id': property.id}) }}">edit</a>
+                    <a href="{{ path('property_show', {'id': property.id}) }}" class="btn btn-primary">show</a>
+                    <a href="{{ path('property_edit', {'id': property.id}) }}" class="btn btn-primary">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -57,7 +26,7 @@
     </table>
 
     <div class="container">
-            <a href="{{ path('property_new') }}">Create new</a>
+            <a href="{{ path('property_new') }}" class="btn btn-primary">Create new</a>
     </div>
 
 {% endblock %}
