--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -33,15 +33,15 @@
                         <tbody>
                             <tr>
                                 <th>Surface habitable</th>
-                                <td>{{ property.surface | nl2br}}</td>
+                                <td>{{ property.surface | nl2br}} m²</td>
                             </tr>
                             <tr>
                                 <th>Surface</th>
-                                <td>{{ property.surface }}</td>
+                                <td>{{ property.surface }} m²</td>
                             </tr>
                             <tr>
                                 <th>Pièces</th>
-                                <td>{{ property.rooms }}</td>
+                                <td>{{ property.rooms }} </td>
                             </tr>
                             <tr>
                                 <th>Chambre</th>
