--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                           <a class="nav-link {% if current_menu is defined and current_menu == 'login' %} active {% endif %}" href="{{ path ('app_login')}}">Connexion</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{{ path ('app_logout')}}">Déconnexion</a>
+                        </li>
                       </ul>
                       <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
